@@ -7,7 +7,12 @@ namespace Qyoto {
 		public QDBusVariant() : base() { }
 		public QDBusVariant(QVariant variant) : base(variant) { }
 
-		public void SetVariant(QVariant variant) {}
+		static public QDBusVariant FromValue<T>(object value) {
+			return new QDBusVariant(QVariant.FromValue<T>(value));
+		}
+
+		public void SetVariant(QVariant variant) {
+		}
 
 		QVariant Variant() { return this; }
 	}
